--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -2464,6 +2464,7 @@ color: #808080;
 .nav_col img {
     /* max-width: 61%; */
     margin-left: -13px;
+    margin-top: 20px;
 }
 .vrnl_logo {
     width: 134px;
