--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -2,8 +2,8 @@
   <header class="page-header" [class.is-sticky]="isSticky">
     <nav>
       <div class="hader_row">
-        <div class="nav_col">
-          <a ><img class="vrnl_logo" src="assets/VRNL new.png"  routerLink="/"/></a>
+        <div class="nav_col" >
+          <img class="images_logo" src="assets/VRNL new.png" routerLink="/">
         </div>
         <div class="nav_col_1">
           <ul class="nav_col_2">
@@ -52,7 +52,13 @@
             <li routerLink="/our-theme">
               Our Theme
             
-            
+              <!-- <img src="assets/download.png"> ENGLISH <i class="fa-solid fa-angles-down"></i> -->
+              <!-- <div class="sub_menu">
+                <ul>
+                  <li class="font-color"><img src="assets/download.png"> English</li>
+                  <li class="font-color"><img src="assets/download (1).png"> Esponal</li>
+                </ul>
+              </div> -->
 
 
             </li>
@@ -80,7 +86,9 @@
                   <a routerLink="/white-label-betting-platform"> WHITE LABEL SPORTSBOOK </a>
                 </button>
               </h2>
-             
+              <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                      </div> -->
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingTwo">
@@ -100,7 +108,18 @@
 
               </div>
             </div>
-           
+            <!-- <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                            WEB3 
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body"> <a routerLink="/web3-casino">Web3 casino</a></div>
+                        <div class="accordion-body"><a routerLink="/crypto-casino">Crypto Casino</a></div>
+
+                      </div>
+                    </div> -->
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingFour">
@@ -123,21 +142,29 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingFive">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive" routerLink="/our-theme">
-                  Our Theme </button>
+                  data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                  <img src="assets/download.png"> ENGLISH </button>
               </h2>
-              <!-- <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
+              <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
                 data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body"><img src="assets/download.png"> English</div>
 
                 <div class="accordion-body">
                   <img src="assets/download (1).png"> Esponal
                 </div>
-              </div> -->
+
+
+
+              </div>
             </div>
+
+
+
+
           </div>
         </div>
       </div>
     </div>
   </nav>
+
 </div>
