--- a/src/app/contact-com/contact-com.component.css
+++ b/src/app/contact-com/contact-com.component.css
@@ -140,7 +140,9 @@ width: 33%;
     }
 
     .contact_social{
-        
+        /* display: flex;
+        justify-content: center;
+        margin-top: 31px; */
         margin-left: -45px;
     }
 
@@ -150,15 +152,15 @@ width: 33%;
         width: 100%;
     }
     .name_input input {
-       
+        /* width: 351px; */
         width: 100%;
     }
     .email_input input {
-       
+        /* width: 351px; */
         width: 100%;
     }
     textarea {
-      
+        /* width: 351px; */
         width: 100%;
     }
     .contact_sec{
@@ -201,7 +203,7 @@ cursor: pointer;
     height: 49px;
 }
 #country_selector{
-  
+    /* padding-top: 15px; */
     padding-left: 45px;
 }
 
@@ -210,7 +212,7 @@ cursor: pointer;
 .wpcf7-response-output {
     border: 2px solid;
     border-color: #ffb900 !important;
-  
+    /* display: none; */
 }
 .wpcf7 form .wpcf7-response-output {
     margin: 2em 0.5em 1em;
@@ -228,7 +230,7 @@ cursor: pointer;
     
 }
 .wpcf7-spinner {
- 
+    /* visibility: hidden; */
     display: inline-block;
     background-color: #23282d;
     opacity: 0.75;
@@ -273,4 +275,8 @@ cursor: pointer;
 
 
 
-
+/* .icon{
+    background-image: url("/assets/FLAG.jpg");
+ background-repeat: no-repeat;
+ padding-top: 12px;
+} */
