--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,24 @@
                       </ul>
                     </div>
                   </li>
-                 
+                  <!-- <li class="hover_me">
+                    <a routerLink="/wagering-solutions">Wagering solution</a>
+                    <div class="sub_menu_3">
+                      <ul>
+                        <li><a routerLink="/cashout">Cashout</a></li>
+                      </ul>
+                    </div>
+                  </li> -->
+                  <!-- <li class="hover_me">
+                    <a routerLink="/sports-betting-software/retail-solutions">Betting retail</a>
+                    <div class="sub_menu_4">
+                      <ul>
+                        <li>
+                          <a routerLink="/betting-terminals">Betting Terminal</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </li> -->
                   <li><a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a></li>
                 </ul>
               </div>
@@ -67,7 +84,26 @@
                 </ul>
               </div>
             </li>
-           
+            <!-- <li>
+              <a class="act" href="#">Web3</a>
+              <div class="sub_menu">
+                <ul>
+                  <li>
+                    <a routerLink="/web3-sportsbook">Web3 sportsbook</a>
+                  </li>
+                  <li>
+                    <a routerLink="/crypto-casino">White label Crypto Casino</a>
+                  </li>
+                  <li><a routerLink="/web3-casino">Web3 Casino</a></li>
+                  <li>
+                    <a routerLink="/decentralized-sports-betting"
+                      >Decentralized sports betting</a
+                    >
+                  </li>
+                  <li><a routerLink="/bitcoin-sportsbook">Bitcoin sportsbook</a></li>
+                </ul>
+              </div>
+            </li> -->
             <li>
               <a class="act" href="#">Company</a>
 
@@ -85,21 +121,47 @@
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact</a></li>
             <li>
-              <a class="act" routerLink="/our-theme"
+              <a class="act" href="/our-theme"
                 >
                 <!-- <img src="assets/en.png" alt="flag" /> -->
                  Our Theme
                 </a
               >
 
-             
+              <!-- <div class="sub_menu">
+                <ul>
+                  <li class="list">
+                    <img src="assets/pt-br.png" title="Portuguese (Brazil)" />
+                    Portuguese (Brazil)
+                  </li>
+                  <li class="list">
+                    <img src="assets/es.png" title="Spanish" /> Spanish
+                  </li>
+                  <li class="list">
+                    <img src="assets/fr.png" title="French" /> French
+                  </li>
+                  <li class="list">
+                    <img src="assets/de.png" title="German" /> German
+                  </li>
+                  <li class="list">
+                    <img src="assets/ja.png" title="Japanese" /> Japanese
+                  </li>
+                  <li class="list">
+                    <img src="assets/tr.png" title="Terkish" /> Terkish
+                  </li>
+                  <li class="list">
+                    <img src="assets/zh.png" title="Chinese (Simplified)" />
+                    Chinese (Simplified)
+                  </li>
+                </ul>
+              </div> -->
             </li>
           </div>
         </div>
         <div class="nav_col_3">
           <a target="_blank" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d" style="color: black;" ><i class="fa-brands fa-facebook-f"></i></a>
          
-          <a target="_blank" href="https://t.me/Johnmark1974" style="color: black;" ><i class="fa-brands fa-telegram"></i></a>
+          <a target="_blank" href="https://t.me/Johnmark1974" style="color: black;" ><i class="fa-brands fa-twitter"></i></a>
           <!-- <i class="fa-brands fa-youtube"></i>
           <i class="fa-brands fa-linkedin"></i> -->
           <a target="_blank" href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0" style="color: black;" ><i class="fa-brands fa-whatsapp"></i></a>
@@ -116,7 +178,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <div class="nav_col" routerLink="/">
-        <img src="assets/VRNL new.png" alt="vrnl" />
+        <img src="assets/VRNL new.png" />
       </div>
       <button
         class="navbar-toggler"
@@ -247,7 +309,43 @@
             </div>
           </div>
 
-       
+         <!-- <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFive">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseFive"
+                aria-expanded="false"
+                aria-controls="flush-collapseFive"
+              >
+                Web3
+              </button>
+            </h2>
+            <div
+              id="flush-collapseFive"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingFive"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <a routerLink="/web3-sportsbook">Web3 Sportsbook</a>
+              </div>
+              <div class="accordion-body">
+                <a routerLink="/crypto-casino">White label crypto casino</a>
+              </div>
+              <div class="accordion-body">
+                <a routerLink="/web3-casino"> Web3 casino</a>
+              </div>
+              <div class="accordion-body">
+                <a routerLink="/decentralized-sports-betting">Decentralized Sports betting</a>
+              </div>
+              <div class="accordion-body">
+                <a routerLink="/bitcoin-sportsbook" >Bitcoin sportsbook</a>
+              </div>
+               <div class="accordion-body"> Streaming platform</div> -->
+            <!-- </div>
+          </div> --> 
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingSix">
               <button
@@ -267,7 +365,9 @@
               aria-labelledby="flush-headingSix"
               data-bs-parent="#accordionFlushExample"
             >
-           
+              <!-- <div class="accordion-body">
+                <a routerLink="/demo-sportsbook" >Demo</a>
+              </div> -->
               <div class="accordion-body">
                 <a routerLink="/about-us">About Us</a>
               </div>
@@ -276,7 +376,11 @@
                   >Online sportsbook Software</a
                 >
               </div>
-              
+              <!-- <div class="accordion-body">
+                <a routerLink="/certified-sports-betting-software">Certifications</a>
+              </div> -->
+              <!-- <div class="accordion-body"> Bitcoin sportsbook</div> -->
+              <!-- <div class="accordion-body"> Streaming platform</div> -->
             </div>
           </div>
           <div class="accordion-item">
@@ -292,7 +396,9 @@
                 <a routerLink="/contact">contact</a>
               </button>
             </h2>
-         
+            <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+      </div> -->
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingseven">
@@ -307,9 +413,57 @@
                 <a routerLink="/our-theme">Theme</a>
               </button>
             </h2>
-          
+            <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+      </div> -->
           </div>
-         
+          <!-- <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingEight">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseEight"
+                aria-expanded="false"
+                aria-controls="flush-collapseEight"
+              >
+                <a>
+                  <img src="assets/en.png" alt="flag" title="english" />
+                  English
+                </a>
+              </button>
+            </h2>
+            <div
+              id="flush-collapseEight"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingEight"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <img src="assets/pt-br.png" title="Portuguese (Brazil)" />
+                Portuguese (Brazil)
+              </div>
+              <div class="accordion-body">
+                <img src="assets/es.png" title="Spanish" /> Spanish
+              </div>
+              <div class="accordion-body">
+                <img src="assets/fr.png" title="French" /> French
+              </div>
+              <div class="accordion-body">
+                <img src="assets/de.png" title="German" /> German
+              </div>
+              <div class="accordion-body">
+                <img src="assets/ja.png" title="Japanese" /> Japanese
+              </div>
+              <div class="accordion-body">
+                <img src="assets/tr.png" title="Terkish" /> Terkish
+              </div>
+              <div class="accordion-body">
+                <img src="assets/zh.png" title="Chinese (Simplified)" />
+                Chinese (Simplified)
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
