--- a/src/app/header3/header3.component.css
+++ b/src/app/header3/header3.component.css
@@ -414,7 +414,13 @@ justify-content: center;
     width: 320px;
   }
 
+  .sportsbetting-benefits p {
+    /* padding-right: 25%;
+         padding-left: 6%; */
+  }
+
   .sportsbetting-benefits h3 {
+    /* margin-left: 5%; */
     width: 96%;
     font-size: 27px;
     margin-bottom: 15px;
@@ -506,6 +512,7 @@ justify-content: center;
 .contact_row {
   display: flex;
   justify-content: center;
+  /* align-items: center; */
 }
 .contact_col {
   width: 41%;
@@ -650,6 +657,7 @@ textarea {
 .comp_details {
   display: flex;
   justify-content: center;
+  /* align-items: center; */
   gap: 207px;
 }
 .comp_sol {
@@ -739,6 +747,7 @@ textarea {
 }
 
 html {
+  /* 1rem = 10px */
   overflow-x: hidden;
 }
 
@@ -748,6 +757,7 @@ body {
 
 .header {
   padding: 0 4.8rem;
+  /* height: 5rem; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -755,6 +765,7 @@ body {
   position: fixed;
   width: 100%;
   z-index: 9999;
+  /* box-shadow: 0em 0.19em 0.3em 0px hsla(0, 0%, 0%, 0.11); */
 }
 
 .header .logo {
@@ -763,6 +774,7 @@ body {
 
 .navbar-list {
   display: flex;
+  /* gap: 0.8rem; */
   list-style: none;
 }
 
@@ -997,6 +1009,7 @@ Responsive Codes
   }
 
   .navbar {
+    /* display: none; */
     width: 100%;
     height: 100vh;
     background-color: rgba(160, 197, 40, 0.94);
@@ -1116,7 +1129,9 @@ Responsive Codes
 }
 /* header css end here */
 
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap");
 
 .esports-betting-main {
   display: flex;
@@ -1234,7 +1249,9 @@ Responsive Codes
   margin-right: -5%;
 }
 
-
+.top-esports-col2-images img {
+  /* width: 50%; */
+}
 
 /* =============================================================== */
 
@@ -1679,6 +1696,8 @@ margin-top: 146px;
 }
 .ter_head_2{
     font-size: 40px;
+    /* margin-top: -13px; */
+    /* font-size: calc(200%); */
     font-family: "Raleway", sans-serif;
     font-weight: 400;
 }
@@ -2152,7 +2171,10 @@ width: 97%;
 
 
 
-
+  /* mobile betting */
+  @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
   
   
   .mobile-sports-main{
@@ -2294,17 +2316,3 @@ width: 97%;
     padding: 23px 2.4rem;
     border-bottom: 1px solid rgba(0,0,0, 0.1);
 }}
-.nav_col_2 {
-  display: flex;
-  padding-top: 12px
-}
-@media (min-width: 1200px){
-.nav_col img {
-    /* max-width: 61%; */
-    margin-left: -13px;
-}
-.vrnl_logo {
-    width: 134px;
-    height: 53px;
-}
-}
