--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -40,7 +40,7 @@
         </div>
     </a>
     </div>
-    <div class="card"  ><a href="https://babu.vrnlexch.com/"target="_blank">
+    <div class="card"  ><a href="https://babu88.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo" src="assets/bb88_logo_w_sponsor.webp "alt="bb88_logo_w_sponsor" style="width: 197px;">
             <h4 class="logoname">Babu88</h4>
