--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -141,21 +141,11 @@
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingFive">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button routerLink="/our-theme" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                  <img src="assets/download.png"> ENGLISH </button>
+                   Our Theme </button>
               </h2>
-              <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body"><img src="assets/download.png"> English</div>
-
-                <div class="accordion-body">
-                  <img src="assets/download (1).png"> Esponal
-                </div>
-
-
-
-              </div>
+            
             </div>
 
 
