--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -235,7 +235,9 @@
               <div class="accordion-body">
                 <a routerLink="/sports-betting-software">sports betting software</a>
               </div>
-
+              <div class="accordion-body">
+                <a routerLink="/sportsbook-iframe">Sportsbook iFrame</a>
+              </div>
               <div class="accordion-body">
                 <a routerLink="/sports-betting-software/esports-betting-software" >eSports betting</a>
               </div>
