--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -10,7 +10,7 @@
           widest programming of online events and markets.
         </p>
 
-        <button class="button_slide slide_right">
+        <button class="button_slide slide_right" routerLink="/contact">
           <i class="fa-solid fa-phone"></i> Contact us!
         </button>
       </div>
