--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -30,7 +30,7 @@
         </a>
 
         <br />
-        <button class="online-casino-button">
+        <button class="online-casino-button" routerLink="/contact">
           <i class="fa-solid fa-phone"></i> Contact us!
         </button>
       </div>
