--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="onther_btn">
-<button class="hover-1_1 otn_s_1 button_slide slide_right"><i class="fa-solid fa-phone"></i>     Contact us!</button> 
+<button class="hover-1_1 otn_s_1 button_slide slide_right" routerLink="/contact"><i class="fa-solid fa-phone"></i>     Contact us!</button> 
 
 </div>
     </div>
