--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -262,12 +262,12 @@
       <div class="start_details">
         <h1 class="start_header">Before starting, see it in action!</h1>
         <p class="start_para">A demo platform:</p>
-        <a href=" https://www.lc247.co/" target="_blank" style="color: #a0c528;"><p class="start_a"> https://www.lc247.co/m/sports</p></a>
+        <a href=" https://www.lc247.co/" target="_blank" style="color: #a0c528;"><p class="start_a"> https://www.lc247.co/  </p></a>
       </div>
     </div>
   </section>
 
- <app-contact-com id="contact"></app-contact-com>
+ <app-contact-com></app-contact-com>
 
   <app-footer></app-footer>
 
