--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -8,7 +8,7 @@
             <p style="padding-top: 2.25em;">The eSports phenomenon is very widespread in the United States and is now growing at a dizzying rate in the Latin American market.</p>
 
             <div class="esports-betting-col1-button">
-                <button class="button-design">Start Now</button>
+                <button class="button-design" routerLink="/contact">Start Now</button>
             </div>
 
         </div>
