--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -119,7 +119,7 @@
               </div>
             </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
-            <li><a class="act" routerLink="/contact">Contact</a></li>
+            <li><a class="act" routerLink="/contact">Contact us</a></li>
             <li>
               <a class="act" href="/our-theme"
                 >
