--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -146,7 +146,7 @@
             
         </div>
         
-       <button class="btns_lives_sec">Book a demo</button>
+       <button class="btns_lives_sec" routerLink="/contact">Book a demo</button>
         </div>
     </div>
 
