--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="sportsbetting-section1-button" (click)="scrollToContact()">
-        <button>Book a Demo</button>
+        <button routerLink="/contact">Book a Demo</button>
       </div>
     </div>
 
