--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -73,7 +73,7 @@
                 </div >
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_5" src="/assets/Warcraft-III.png.webp" alt="Top eSports titles">
+                    <img class="esports_5" src="assets/Warcraft-III.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
