--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -697,7 +697,7 @@ nav{
   .nav_col_1 ul li:hover .sub_menu{
     display: block;
     position: absolute;
-    margin-top: 13px;
+    /* margin-top: 13px; */
       margin-left: -20px
   }
   
