--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
         <div class="nav_col_2">
           <div class="nav_row_2">
             <li class="active ">
-              <a class="act acthome current_page_item " routerLink="/" style="color: #A0C528;" >Home</a>
+              <a class="act acthome current_page_item active" routerLink="/"  >Home</a>
             </li>
             <li>
               <a class="act" href="#">Betting</a>
