--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -120,13 +120,11 @@
             </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact</a></li>
-            <li>
-              <a class="act" href="/our-theme"
-                >
+            <li routerLink="/our-theme">
+             
                 <!-- <img src="assets/en.png" alt="flag" /> -->
                  Our Theme
-                </a
-              >
+              
 
               <!-- <div class="sub_menu">
                 <ul>
