--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -1,9 +1,20 @@
 <app-header></app-header>
-
-    <div class="container">
+<div class="main-container">
+    <div class="container1">
+        <div class="left-content">
+            <h1>We are VRNL</h1>
+            <p><strong>THE BIGGEST PLATFORM FOR PROVIDING ONLINE CASINO BETTING ID’s</strong>The widest selection of entertainment games available online White Label Casino with more than 30,000 games. Available online casino software is simple as our platform is easy to manage.</p>
+        </div>
+        <div class="right-images">
+            <img src="assets/sirplay igaming.webp" alt="Image 1">
+            <!-- <img src="image2.jpg" alt="Image 2">
+            <img src="image3.jpg" alt="Image 3"> -->
+        </div>
+    </div>
+    <div class="container ">
     <div class="card"><a href="https://www.skyexch.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/skylogo.png" alt="skylogo">
+            <img class="lb_partner_logo logo1" src="assets/skylogo.png" alt="skylogo">
             <h4 class="logoname">Skyexch</h4>
             </div>
         <div class="card-content">
@@ -16,7 +27,7 @@
     </div>
     <div class="card"><a href="https://velki.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/velkilogo.webp" alt="velkilogo" style="width: 170px;">
+            <img class="lb_partner_logo logo2" src="assets/velkilogo.webp" alt="velkilogo" >
             <h4 class="logoname " style="    padding-top: 60px;">Velki</h4>
             </div>
         <div class="card-content">
@@ -29,10 +40,10 @@
     </div>
     <div class="card">  <a href="https://gullybet.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-           <img class="lb_partner_logo" src="assets/gullybet.webp" alt="gullybet" style="    width: 240px;">
+           <img class="lb_partner_logo logo3" src="assets/gullybet.webp" alt="gullybet" >
             <h4 class="logoname" style="    padding-top: 45px;">Gullybet</h4>
             </div>
-        <div class="card-content">
+        <div class="card-content logo4">
             <h2>Username : vrnldemo</h2>
           
             <h2>Pass - Asdf1234</h2>
@@ -42,7 +53,7 @@
     </div>
     <div class="card"  ><a href="https://babu88.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/bb88_logo_w_sponsor.webp "alt="bb88_logo_w_sponsor" style="width: 197px;">
+            <img class="lb_partner_logo logo4" src="assets/bb88_logo_w_sponsor.webp "alt="bb88_logo_w_sponsor" >
             <h4 class="logoname">Babu88</h4>
             </div>
         <div class="card-content">
@@ -55,7 +66,7 @@
     </div>
     <div class="card"><a href="https://aura.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/aura.webp" alt="aura" style="width: 205px;">
+            <img class="lb_partner_logo logo5" src="assets/aura.webp" alt="aura" >
             <h4 class="logoname">Aura444</h4>
             </div>
         <div class="card-content">
@@ -68,7 +79,7 @@
     </div>
     <div class="card"><a href="http://www.diamond.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/diamond.png" alt="diamond" style="    width: 191px;">
+            <img class="lb_partner_logo logo6" src="assets/diamond.png" alt="diamond" >
             <h4 class="logoname">Diamond</h4>
             </div>
         <div class="card-content">
@@ -81,7 +92,7 @@
     </div>
     <div class="card"><a href="https://lotus.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/lotus.webp" alt="lotus" style="width: 200px;">
+            <img class="lb_partner_logo logo7" src="assets/lotus.webp" alt="lotus" >
             <h4 class="logoname">Lotus</h4>
             </div>
         <div class="card-content">
@@ -94,7 +105,7 @@
     </div>
     <div class="card"><a href="https://9bazi.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/logo-bazi.webp" alt="logo-bazi" style="    width: 200px;">
+            <img class="lb_partner_logo logo8" src="assets/logo-bazi.webp" alt="logo-bazi">
             <h4 class="logoname">9bazi</h4>
             </div>
         <div class="card-content">
@@ -107,7 +118,7 @@
     </div>
     <div class="card"><a href="https://world777.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/world7777.webp" alt="world7777" style="width: 200px;">
+            <img class="lb_partner_logo logo9" src="assets/world7777.webp" alt="world7777" >
             <h4 class="logoname">World777</h4>
             </div>
         <div class="card-content">
@@ -120,7 +131,7 @@
     </div>
     <div class="card"><a href="https://lcexch.vrnlexch.com/" target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/lcexch.webp" alt="lcexch" style="width: 200px;">
+            <img class="lb_partner_logo logo10" src="assets/lcexch.webp" alt="lcexch">
             <h4 class="logoname">Lcexch</h4>
             </div>
         <div class="card-content">
@@ -131,5 +142,6 @@
         </div>
     </a>
     </div>
+</div>
 </div>
 <app-footer></app-footer>
