--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -120,39 +120,8 @@
             </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact</a></li>
-            <li routerLink="/our-theme">
-             
-                <!-- <img src="assets/en.png" alt="flag" /> -->
-                 Our Theme
-              
-
-              <!-- <div class="sub_menu">
-                <ul>
-                  <li class="list">
-                    <img src="assets/pt-br.png" title="Portuguese (Brazil)" />
-                    Portuguese (Brazil)
-                  </li>
-                  <li class="list">
-                    <img src="assets/es.png" title="Spanish" /> Spanish
-                  </li>
-                  <li class="list">
-                    <img src="assets/fr.png" title="French" /> French
-                  </li>
-                  <li class="list">
-                    <img src="assets/de.png" title="German" /> German
-                  </li>
-                  <li class="list">
-                    <img src="assets/ja.png" title="Japanese" /> Japanese
-                  </li>
-                  <li class="list">
-                    <img src="assets/tr.png" title="Terkish" /> Terkish
-                  </li>
-                  <li class="list">
-                    <img src="assets/zh.png" title="Chinese (Simplified)" />
-                    Chinese (Simplified)
-                  </li>
-                </ul>
-              </div> -->
+            <li routerLink="/our-theme" >
+             <a class="act" >Our Theme</a>
             </li>
           </div>
         </div>
@@ -410,7 +379,7 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseseven"
               >
-                <a routerLink="/our-theme">Theme</a>
+                <a routerLink="/our-theme"> Our Theme</a>
               </button>
             </h2>
             <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
