--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -4,6 +4,17 @@
         <div class="left-content">
             <h1>We are VRNL</h1>
             <p><strong>THE BIGGEST PLATFORM FOR PROVIDING ONLINE CASINO BETTING ID’s</strong>The widest selection of entertainment games available online White Label Casino with more than 30,000 games. Available online casino software is simple as our platform is easy to manage.</p>
+            <ul>
+                <li>
+                    Sleek and Modern Design
+                </li>
+                <li>Custmization at it's Best
+                </li>
+                <li>Mobile-Friendly and responsive
+                </li>
+                <li>SEO Optimized
+                </li>
+            </ul>
         </div>
         <div class="right-images">
             <img src="assets/sirplay igaming.webp" alt="Image 1">
@@ -12,6 +23,7 @@
         </div>
     </div>
     <div class="container ">
+        
     <div class="card"><a href="https://www.skyexch.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo logo1" src="assets/skylogo.png" alt="skylogo">
