--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -120,10 +120,12 @@
             </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact</a></li>
-            <li routerLink="/our-theme">
-             
+            <li >
+             <a class="act" routerLink="/our-theme" >
+              Our Theme
+             </a>
                 <!-- <img src="assets/en.png" alt="flag" /> -->
-                 Our Theme
+                
               
 
               <!-- <div class="sub_menu">
