--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -79,26 +79,8 @@
               <li><span>Mobile Number</span></li>
             </ul>
             <br>
-            <strong>c.  User portfolio details</strong><br>
-            In addition to the above mentioned information, the user may also create a "Portfolio" by providing the financial details regarding the following:
-            <ul class="privacy_list clearfix">
-              <li><span>Stocks</span></li>
-              <li><span>Mutual Funds</span></li>
-              <li><span>ULIPs</span></li>
-              <li><span>Bullion</span></li>
-              <li><span>Fixed income</span></li>
-              <li><span>Loans</span></li>
-              <li><span>Property</span></li>
-              <li><span>Asset details</span></li>
-              <li><span>Investment transaction details</span></li>
-            </ul>
-            Financial information thus collected is essential in provision of services such as:
-            <ul class="privacy_list clearfix">
-              <li><span>Providing recommendations and daily alerts to the user</span></li>
-              <li><span>Customization of content on the website for enhanced user experience</span></li>
-            </ul>
-            <br>
-            <strong>d.  Mobile device permissions</strong><br>
+         
+            <strong>c.  Mobile device permissions</strong><br>
             When accessing our application on mobile devices/ tablets/ TVs or any other device having access of the said application, we may request and gain access to the following:
             <ul class="privacy_list clearfix">
               <li><span>Accounts - Used for managing multiple user accounts within the app and for Login purposes</span></li>
