--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -44,6 +44,7 @@ padding-bottom: 21px !important;
 /* padding-left: 14px; */
 font-family: 'Poppins';
 font-size: 16px;
+cursor: pointer;
 
 }
 .active,.nav_row_2 li:hover{
