--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -119,7 +119,7 @@
               </div>
             </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
-            <li><a class="act" routerLink="/contact">Contact</a></li>
+            <li><a class="act" routerLink="/contact">Contact Us</a></li>
             <li routerLink="/our-theme" >
              <a class="act" >Our Theme</a>
             </li>
@@ -362,7 +362,7 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseseven"
               >
-                <a routerLink="/contact">contact</a>
+                <a routerLink="/contact">contact Us</a>
               </button>
             </h2>
             <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
