--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -40,7 +40,7 @@
                   <li> <a routerLink="/about-us"> About</a></li>
                   <li> <a routerLink="/"> Sportsbook software provider</a></li>
                   <!-- <li> <a routerLink="/certified-sports-betting-software">Certification</a> </li> -->
-                  <li> <a routerLink="/contact">Contact us</a></li>
+                  <li> <a routerLink="/contact">Contact Us</a></li>
 
 
 
@@ -133,7 +133,7 @@
                 <div class="accordion-body"> <a routerLink="/about-us">About</a></div>
                 <div class="accordion-body"><a routerLink="/">Sportsbook software provider</a></div>
   
-                <div class="accordion-body"><a routerLink="/contact">Contact us</a></div>
+                <div class="accordion-body"><a routerLink="/contact">Contact Us</a></div>
 
 
               </div>
