--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -63,7 +63,7 @@
     
 
       </li>
-      <li><a class="navbar-link" routerLink="/contact">Contact us</a></li>
+      <li><a class="navbar-link" routerLink="/contact">Contact Us</a></li>
 
     </ul>
 
@@ -76,7 +76,7 @@
             <li (click)="animation12()">White label casino</li>
             
             <li (click)="anime()">Company</li>
-            <li> <a href="/contact-us.html">Contact</a>  </li>
+            <li> <a href="/contact-us.html">Contact Us</a>  </li>
             </div>
         </ul>
 
