--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -31,7 +31,7 @@
         <h4 class="header_plat">Try our B2C Betting software</h4>
         <a class="platform_anchor" href="https://cricbuzzer.io"target="_blank"><p>https://cricbuzzer.io</p></a>
         <br />
-        <button class="button_slide slide_right" (click)="scrollToContact()">
+        <button class="button_slide slide_right" (click)="scrollToContact()" routerLink="/contact">
           <i class="fa-solid fa-phone"></i> Contact us!
         </button>
       </div>
