--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -96,7 +96,7 @@
           <div class="container" style="margin-top: 5rem;">
              <h3 class="partner-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">Our Client
              </h3>
-             <p style="color: #686868;text-align: justify;" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000" class="aos-init aos-animate">
+             <p style="color: #686868;text-align: initial;" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000" class="aos-init aos-animate">
               At Vrnl, we are relentless in our pursuit of the finest gaming and entertainment partnerships to ensure an unparalleled experience for our clients and players. Through collaborative agreements with renowned international casinos and virtual games providers, we have seamlessly integrated our Sports Betting Platform with an extensive array of games. These offerings encompass everything from slot machines and table games to live casino experiences, virtual games, and even fantasy games.
 
 Our commitment to excellence extends beyond the diversity of games. Our platform is accessible on both desktop PCs and mobile devices, featuring high-quality graphics, captivating animations, and immersive audio. Furthermore, our intuitive and user-friendly menu enhances the overall user experience.
