--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -1221,7 +1221,7 @@ background-color: #a0c528 !important;
   margin: 15px;
   list-style: none;
   padding-bottom: 4px;
-
+  cursor: pointer;
 }
 
 .nav_col_1 ul li a{
