--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -139,10 +139,10 @@
               </div>
             </div>
 
-            <div class="accordion-item">
+            <div class="accordion-item" >
               <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accord_btn collapsed" type="button" data-bs-toggle="collapse" routerLink="/our-theme"
-                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="cursor:pointer;">
                   <a >  Our Theme </a>
                 </button>
               </h2>
