--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -17,7 +17,7 @@
             </ul>
         </div>
         <div class="right-images">
-            <img src="assets/casino image_11zon.webp" alt="Image 1">
+            <img src="assets/casino image_11zon(1).webp" alt="Image 1">
          
         </div>
     </div>
